--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://servethecode.com" # the base hostname & protocol for your site
 twitter_username: rsnorman
 github_username:  rsnorman
+google_analytics: UA-43183791-6
 
 # Build settings
 markdown: kramdown
